# mac-screen-cast

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  build.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: packetization.rs
docs/: PLATFORM_INTEGRATION.md
docs/resources/: player.html
docs/scripts/: make-demo.sh
docs/superpowers/plans/: 2026-07-10-cross-platform-linux-phase.md
docs/superpowers/specs/: 2026-07-09-demo-video-design.md  2026-07-10-cross-platform-screen-capture-design.md
scripts/: make-demo.sh  release.sh
src/: capture.rs  fmp4.rs  h264.rs  lib.rs  main.rs  pipeline.rs  server.rs  update_checker.rs  webrtc.rs
src/capture/: linux.rs  macos.rs  mod.rs  windows.rs
src/capture/linux/: mod.rs  pipewire.rs  portal.rs
src/encoder/: linux_nvenc.rs  linux_vaapi.rs  macos.rs  mod.rs  windows.rs
tests/: e2e.rs
