[package]
name = "mac-screen-cast"
version = "0.2.2"
edition = "2021"
description = "Stream macOS screen to browser over LAN. Zero-copy ScreenCaptureKit, hardware H.264 encoding via VideoToolbox, ~10ms pipeline latency, ~3% CPU."
license = "MIT"
repository = "https://github.com/lichtcui/mac-screen-cast"
keywords = ["macos", "screen-capture", "webRTC", "h264", "videotoolbox"]
categories = ["multimedia::video", "command-line-utilities"]

[dependencies]
tiny_http = "0.12"
ctrlc = "3.4"
bytes = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
rustrtc = "0.3"
rustls = { version = "0.23", features = ["ring"] }
screencapturekit = "8"
videotoolbox = "0.18"
apple-cf = { version = "0.9", default-features = false, features = ["iosurface"] }
qrcode = "0.14"

[profile.release]
opt-level = 3
lto = true
strip = true
