[package]
name = "mac-screen-cast"
version = "0.2.4"
edition = "2021"
description = "Stream macOS screen to browser over LAN. Zero-copy ScreenCaptureKit, hardware H.264 encoding via VideoToolbox, ~10ms pipeline latency, ~3% CPU."
license = "MIT"
repository = "https://github.com/lichtcui/mac-screen-cast"
keywords = ["macos", "screen-capture", "webRTC", "h264", "videotoolbox"]
categories = ["multimedia::video", "command-line-utilities"]
include = [
    "/src",
    "/resources",
    "/benches",
    "/Cargo.toml",
    "/build.rs",
    "/LICENSE",
    "/README.md",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
tiny_http = "0.12"
ctrlc = "3.4"
bytes = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
rustrtc = "0.3"
rustls = { version = "0.23", features = ["ring"] }
screencapturekit = { version = "8", features = ["macos_14_0"] }
videotoolbox = "0.18"
apple-cf = { version = "0.9", default-features = false, features = ["iosurface"] }
qrcode = "0.14"
ureq = "2"
spin_sleep = "1"
static_assertions = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "packetization"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
